Finished the auth with trakt and started developing the crunchyroll integration

--- a/src/popup.html
+++ b/src/popup.html
@@ -3,8 +3,8 @@
 <link rel="stylesheet" href="popup.css">
 
 <div id="mainPopup">
-	<a href="http://google.com" id="btn-auth" class="btn sign-out">
-		Sign-out
+	<a target="_blank" id="btn-auth" class="btn">
+		Loading...
 	</a>
 </div>
 
